# GitConnectX

./: .env  .gitignore  LICENSE  Project Progress Temp-GEHU.docx  README.md  SETUP.md  Social_Network_GitHub_Users.py  compile_algorithms.py  fetch_data.py  followers.csv  get_user_data.py  package-lock.json  requirements.txt  restart_api.bat  run.py  run_app.py  run_backend.py  run_backend.py.bak  start_api.bat  start_app.bat  start_app.sh  start_backend.py  temp_env.txt
api/: app.py  auth.py  init.py  routes.py
backend/: README.md  __init__.py  config.py  database.py  database_mongo.py  enhanced_data_fetcher.py  fetch_data.ipynb  fetch_data.py  github_service.py  graph_service.py  processor.py  run.py
backend/api/: __init__.py  app.py
backend/api/auth/: __init__.py  github_auth.py  jwt_auth.py  (+1 more)
cpp/: graph.cpp  graph.h  pagerank.cpp
cpp_algorithms/: .gitignore  CMakeLists.txt  README.md  bfs_dfs.cpp  dijkstra.cpp  example.cpp  graph.h  graph_build.cpp  hits.cpp  kcore.cpp  louvain.cpp  pagerank.cpp  test_algorithms.cpp
cpp_algorithms/cpp/: graph.cpp  graph.h  pagerank.cpp
cpp_algorithms/frontend/src/: App.jsx
cpp_algorithms/scripts/: data_fetcher.py  data_preprocessor.py
dataset/: contributors.csv
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/public/: site.webmanifest
frontend/src/: App.jsx  index.css  main.jsx
models/: edge.py  graph.py  repository.py
processed_data/: commit_network.adjlist  commit_network.json  follow_network.adjlist  follow_network.json
scripts/: data_fetcher.py  data_preprocessor.py
(+30 files in other folders)
